# sw-coding-assignment

./: .clang-format  .gitignore  Annotation.txt  CMakeLists-cli-gui.txt  CMakeLists-cli.txt  CMakeLists.txt  Dephy Coding Assignment.docx  DesignNotes.txt  EPROM.cpp  EPROM.h  INSTALL  LICENSE  Makefile  README.md  TOOL_MANUAL.md  cat.txt  csv_aligner.cpp  csv_aligner_build_instructions_SK_06_22_22.docx  data.txt  data1.txt  data2.txt  datafile.h  enum.h  eprom  eprom_debug  fileHandler.cpp  fileHandler.h  format.sh  frog.txt  frontend.py  graphical_interface.h  helloworld.txt  house.txt  how-to-compile.txt  main.cpp  main_cli.cpp  makefile  moderncpp.cpp  myfile.txt  numbers.txt  (+19 more)
.github/: pull_request_template.md
VepromDephy/: VepromDephy.sln
code/: .cproject  .project  Makefile  csv_aligner_windows.sln  csv_aligner_windows.vcxproj  csv_aligner_windows.vcxproj.filters  notes.txt  veprom.cpp
coding_assignment-main/: README.md  csv_aligner.cpp
csv_aligner/: CMakeLists.txt
csv_aligner/csv_aligner/: CMakeLists.txt  Data.cpp  Data.h  DataProcessor.h  csv_aligner.cpp
data/: walk_data_1.csv  walk_data_2.csv
doc/: Workflow of vEPROM v2 20240520.drawio  pull_request.md  update log.md
examples/: example_create_load.sh  example_read_raw_write_raw_erase.sh  example_read_write_list.sh
include/: eprom_chip.h  eprom_emulator.h  eprom_sysdef.h  error_code.h
readme/: README.md
source/: CMakeLists.txt  main.cpp  veprom.cpp  veprom.h
src/: align.cpp  clean.cpp  command.h  command_registry.h  context.h  create_command.cpp  create_command.h  datafile.hpp  datamanager.cpp  datamanager.hpp  datarecord.hpp  eprom_chip.cc  eprom_emulator.cc  erase_command.cpp  erase_command.h  file_info.h  list_command.cpp  list_command.h  load_command.cpp  load_command.h  main.cc  main.cpp  matrices.cpp  matrices.hpp  peaks.cpp  proto.hpp  read.cpp  read_file_command.cpp  read_file_command.h  read_raw_command.cpp  read_raw_command.h  regression.cpp  regressor.cpp  (+10 more)
(+33 files in other folders)
